# ddd-snd

./: LICENSE  pyproject.toml  readme.md
ddd-snd/: instance.py  time_expansion.py
ddd_snd/: discretization_discovery.py  instance.py  snd_model.py  solution.py  solver.py  time_expansion.py
ddd_snd/snd/: model.py  solver.py  time_expansion.py
instances/: sources.md
instances/C_timed/: c33.dow  c35.dow  c36.dow  c37.dow  c38.dow  c39.dow  c40.dow  c41.dow  c42.dow  c43.dow  c44.dow  c45.dow  c46.dow  c47.dow  c48.dow  c49.dow  c50.dow  c51.dow  c52.dow  c53.dow  c54.dow  c55.dow  c56.dow  c57.dow  c58.dow  c59.dow  c60.dow  c61.dow  c62.dow  c63.dow  c64.dow
scripts/instance_creation/: create_timed_C_instances.py
scripts/solving/: solve_timed_C_instance.py
tests/: conftest.py  test_instance.py  test_solver.py  test_time_expansion.py
tests/data/: tiny_instance.dow
