[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ddd_snd"
description = "An implementation of the dynamic discretization discovery algorithm by Boland et al. 2017"
authors = [{ name = "Alexander Helber", email = "helber@or.rwth-aachen.de" }]
dependencies = ["gurobipy==12.0.0", "rustworkx==0.15.1"]
readme = "readme.md"
